# safekey

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: generator.rs  main.rs
