[package]
name = "safekey"
version = "0.1.0"
edition = "2018"
description = "A command-line password generator"
authors = ["Irfan"]
license = "MIT"
repository = "https://github.com/malwarebo/safekey"
[[bin]]
name = "passforge"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
